WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
246188
AX: VoiceOver double reads list markers, doesn't output braille for list items
https://bugs.webkit.org/show_bug.cgi?id=246188
Summary
AX: VoiceOver double reads list markers, doesn't output braille for list items
Tyler Wilcock
Reported
2022-10-06 16:44:30 PDT
VoiceOver double reads list markers, doesn't output braille for list items
Attachments
Patch
(3.54 KB, patch)
2022-10-06 16:52 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(3.54 KB, patch)
2022-10-06 17:08 PDT
,
Tyler Wilcock
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-10-06 16:44:44 PDT
<
rdar://problem/100875957
>
Tyler Wilcock
Comment 2
2022-10-06 16:45:08 PDT
rdar://100855009
Tyler Wilcock
Comment 3
2022-10-06 16:52:07 PDT
Created
attachment 462848
[details]
Patch
chris fleizach
Comment 4
2022-10-06 16:54:27 PDT
Comment on
attachment 462848
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=462848&action=review
> COMMIT_MESSAGE:18 > +to return attributed strings.
Any test updates?
Tyler Wilcock
Comment 5
2022-10-06 17:08:21 PDT
Created
attachment 462849
[details]
Patch
EWS
Comment 6
2022-10-07 10:02:40 PDT
Committed
255276@main
(8089baaa58f2): <
https://commits.webkit.org/255276@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 462849
[details]
.
Brent Fulgham
Comment 7
2023-04-11 17:03:02 PDT
***
Bug 246155
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug