AX: VoiceOver double reads list markers, doesn't output braille for list items https://bugs.webkit.org/show_bug.cgi?id=246188 rdar://100855009

Reviewed by Chris Fleizach.

This is a regression from:

https://github.com/WebKit/WebKit/commit/3395d79137499cc61964d7e5abd34031bc4977cc
(AX: Expose suggestion, insertion, deletion roles and attributes)

That commit allowed static text elements to return attributed strings.
Due to some quirks in VoiceOver (and also a different bug in
WebKit), this causes issues that will need to be addressed at a later time.

This patch effectively reverts the Mac portion of that commit by
removing the code that allowed AccessibilityRole::StaticText elements
to return attributed strings.

* Source/WebCore/accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::text const):
Stop allowing isStaticText() elements to return textUnderElement.
* Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper accessibilityAttributeValue:forParameter:]):
Stop allowing isStaticText() elements to doAXAttributedStringForRange.

Canonical link: https://commits.webkit.org/255276@main