Source/WebCore/accessibility/AccessibilityNodeObject.cpp
@@ -2220,9 +2220,6 @@ String AccessibilityNodeObject::text() const
             return textOrder[0].text;
     }
 
-    if (isStaticText())
-        return textUnderElement();
-    
     if (!isTextControl())
         return String();
 
